--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <main>
 
-            <div class="section1">
+            <div class="heading">
 
                 <h1>Learn to code by <br> watching others</h1>
 
@@ -29,41 +29,41 @@
 
 
 
-            <div class="section2">
+            <div class="mainbody">
 
-                <p class="head"><strong>Try it free 7 days</strong> then $20/mo. thereafter</p>
+                <p class="try"><strong>Try it free 7 days</strong> then $20/mo. thereafter</p>
 
                 <form action="#" id="form"  >
 
-                    <div class="box">
+                    <div class="container">
 
                         <input type="text" id="fname" class="fname" placeholder="First name" onkeydown="validation()" >
-                        <p id="text"></p>
+                        <p id="none"></p>
 
                     </div>
 
 
-                    <div class="box1">
+                    <div class="conone">
 
                         <input type="text" id="lname" class="lname" placeholder="Last name" onkeydown="validation()">
-                        <p id="text1"></p>
+                        <p id="one"></p>
 
                     </div>
 
 
-                    <div class="box2">
+                    <div class="contwo">
 
 
-                        <input type="email" id="email" class="email" placeholder="Email address" onkeydown="validation()">
-                        <p id="text2"></p>
+                        <input type="email" id="email" class="email" placeholder="Email Address" onkeydown="validation()">
+                        <p id="two"></p>
 
                     </div>
 
 
-                    <div class="box3">
+                    <div class="conthree">
 
-                        <input type="password" id="password" class="password" placeholder="Password" onkeydown="validation()">
-                        <p id="text3"></p>
+                        <input type="pword" id="pword" class="pword" placeholder="Password" onkeydown="validation()">
+                        <p id="three"></p>
 
                     </div>
 
@@ -90,10 +90,10 @@
             var lname=document.getElementById("lname").value;
             var email=document.getElementById("email").value;
             var password=document.getElementById("password").value;
-            var text=document.getElementById("text");
-            var text1=document.getElementById("text1");
-            var text2=document.getElementById("text2");
-            var text3=document.getElementById("text3");
+            var none=document.getElementById("text");
+            var one=document.getElementById("text1");
+            var two=document.getElementById("text2");
+            var three=document.getElementById("text3");
             let fnameElement = document.getElementById("fname");
             let lnameElement = document.getElementById("lname");
             let emailElement = document.getElementById("email");
@@ -105,8 +105,8 @@
             if(fname==""){
                 fnameElement.classList.add('invalid')
                 form.classList.add('invalid')
-                text.innerHTML="first name cannot be empty"
-                text.style.color="red"
+                none.innerHTML="first name cannot be empty"
+                none.style.color="red"
 
             }
 
@@ -117,16 +117,16 @@
 
             if(lname==""){
                 lnameElement.classList.add('invalid')
-                text1.innerHTML="last name cannot be empty"
-                text1.style.color="red"
+                one.innerHTML="last name cannot be empty"
+                one.style.color="red"
             }
 
   
 
             if(email==""){
                 emailElement.classList.add('invalid')
-                text2.innerHTML="looks like this is not an email"
-                text2.style.color="red"
+                two.innerHTML="looks like this is not an email"
+                two.style.color="red"
             }
 
             
@@ -135,8 +135,8 @@
 
             if(password==""){
                 passwordElement.classList.add('invalid')
-                text3.innerHTML="password cannot be empty"
-                text3.style.color="red"
+                three.innerHTML="password cannot be empty"
+                three.style.color="red"
             }
 
             
